# security_content_docs

./: .gitignore  Gemfile  README.md  _config.yml  index.markdown  pyproject.toml
_data/: navigation.yml
_pages/: about.md  abuse.md  account_compromise.md  ad_ldap.md  ad_ldap_api.md  adversary_tactics.md  application_type.md  aws_iam.md  aws_iam_api.md  azure_ad_graph.md  azure_ad_graph_api.md  best_practices.md  carbon_black_response.md  carbonblack_response.md  cisco_umbrella.md  cloud_security.md  cloud_type.md  credential_eviction.md  crowdstrike_oauth.md  crowdstrike_oauth_api.md  cylance.md  data_destruction.md  deprecated_type.md  detections.md  endpoint_type.md  endpointplaybook.md  enrichment.md  enrichmentplaybook.md  experimental_type.md  falcon_host_api.md  file_analysis.md  file_eviction.md  g_suite_for_gmail.md  identifier_analysis.md  investigation.md  jira.md  lateral_movement.md  ldap.md  malware.md  message_analysis.md  (+40 more)
_playbooks/: active_directory_disable_account_dispatch.md  active_directory_enable_account_dispatch.md  active_directory_reset_password.md  ad_ldap_account_locking.md  ad_ldap_account_unlocking.md  ad_ldap_entity_attribute_lookup.md  attribute_lookup_dispatch.md  automated_enrichment.md  aws_disable_user_accounts.md  aws_find_inactive_users.md  aws_iam_account_locking.md  aws_iam_account_unlocking.md  azure_ad_account_locking.md  azure_ad_account_unlocking.md  azure_ad_graph_user_attribute_lookup.md  azure_ad_locking_account.md  block_indicators.md  cisco_umbrella_dns_denylisting.md  crowdstrike_malware_triage.md  hunting.md  (+64 more)
(+3516 files in other folders)
