[tool.poetry]
name = "security_content_docs"
version = "0.1.0"
description = ""
authors = ["d1vious <josehelps@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"
stix2 = "^3.0.1"
pycvesearch = "^1.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
